# Tuturis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  components.json  eslint.config.mjs  example.env  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/cache/eslint/: .cache_1trgkfm
.next/server/: _rsc_messages_en_json.js  _rsc_messages_fr_json.js  app-paths-manifest.json  edge-runtime-webpack.js  middleware-build-manifest.js  middleware-manifest.json  middleware.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/vendor-chunks/: @formatjs+fast-memoize@2.2.7.js  @formatjs+icu-messageformat-parser@2.11.2.js  @formatjs+icu-skeleton-parser@1.8.14.js  @radix-ui+primitive@1.1.3.js  @radix-ui+react-checkbox@1._a75ee0644ef68d1ab4bd7ce1eb9d7cf1.js  @radix-ui+react-collection@_01f9063320ed9a23141b9f5a0fa2845e.js  @radix-ui+react-compose-ref_3949814ccce8133a507a42c1325c3ba3.js  @radix-ui+react-context@1.1_a8aaf523c6c889bf5cc42377f30ffbd4.js  @radix-ui+react-dialog@1.1._8b632e03de936129a514c94dcfbdc5c8.js  @radix-ui+react-direction@1_de70194ca0b8d0ea45810dcbfc754cd0.js  @radix-ui+react-dismissable_287978154d44eaafc8701519ea6145a0.js  @radix-ui+react-focus-guard_bee336d24999d5ad24945b3d59ff7174.js  @radix-ui+react-focus-scope_cea28f406c9cc5cc3c981261c5b85faa.js  @radix-ui+react-id@1.1.1_@types+react@19.1.13_react@19.1.0.js  @radix-ui+react-label@2.1.7_d21172d6270ea6a92471d0210cd35a78.js  @radix-ui+react-navigation-_3c467f86a2e31affd3b06e57e828c8a5.js  @radix-ui+react-portal@1.1._bdff6cc17ae5fdd79d653e8d2d6fec6c.js  @radix-ui+react-presence@1._9e06a727458f5ebdaa1f57acc218b334.js  @radix-ui+react-primitive@2_44edcb3e202e33e38211dd183a648162.js  @radix-ui+react-slot@1.2.3_@types+react@19.1.13_react@19.1.0.js  @radix-ui+react-use-callbac_6a4f235793313eb64ceff19d19a4b8e6.js  @radix-ui+react-use-control_2886af3d9c5a66d5ea704dd2c99d6f7e.js  @radix-ui+react-use-effect-_02a263540ae4b932d8957db733ed4526.js  @radix-ui+react-use-escape-_b81160fb407363adf201fe94846e45f1.js  @radix-ui+react-use-layout-_174f92108840a080e5dc31b2f70a0406.js  @radix-ui+react-use-previou_1dabe6090cbcdba8346b591f5c80ed7c.js  @radix-ui+react-use-size@1._ceb9ea10685a3743893ff265e69e2df1.js  @radix-ui+react-visually-hi_7d9f38cfbba6cf40a1b4520ae275a57a.js  @swc+helpers@0.5.15.js  aria-hidden@1.2.6.js  class-variance-authority@0.7.1.js  clsx@2.1.1.js  get-nonce@1.0.1.js  intl-messageformat@10.7.16.js  lucide-react@0.544.0_react@19.1.0.js  next-intl@4.3.9_next@15.5.3_2efcee39e2f7f59df3efcc776b0a865c.js  react-remove-scroll-bar@2.3_b061b9ad8e0fd4822a442985a5a04a4b.js  react-remove-scroll@2.7.1_@types+react@19.1.13_react@19.1.0.js  react-style-singleton@2.2.3_29cb52a17eecaeeddc33dd654e9c35b6.js  tailwind-merge@3.3.1.js  (+4 more)
.next/static/chunks/: _app-pages-browser_node_modules_pnpm_next_15_5_3_react-dom_19_1_0_react_19_1_0__react_19_1_0_-0e24cd.js  app-pages-internals.js  webpack.js
.next/static/webpack/: webpack.038431c837a3c37d.hot-update.js
.next/types/: routes.d.ts  validator.ts
client/: main.cpp
messages/: en.json  fr.json
prisma/: schema.prisma
prisma/migrations/20250918180844_init/: migration.sql
server/: PasskeysToDB.cpp  PasskeysToDB.h  db.cpp  db.h  db_utils.cpp  db_utils.h  httpServer.cpp  httpServer.h  main.cpp
server/auth-server/: index.js  package-lock.json  package.json
server/controlPanel/: index.html  login.html  script.js  testWebauthn.html  userSettings.html  webauthn.js
server/controlPanel/administration/: createUser.html  index.html  users.html
server/controlPanel/styles/: administration.css  board.css  login.css
src/app/: layout.tsx  page.tsx
src/app/[locale]/: globals.css  layout.tsx  page.tsx
src/app/haveibeenpwned/: page.tsx
src/components/navigation/: app-navigation.tsx
src/components/ui/: copyright.tsx  navigation-menu.tsx  shimmer-button.tsx
src/lib/: auth.ts  changeLanguage.ts  prisma.ts
(+15 files in other folders)
